[package]
name = "iiiD6"
version = "0.1.0"
authors = ["Andy Wang <cbeuw.andy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "^0.1.42"
num-complex = "^0.2.4"
sphrs = "^0.1.2"
rand = { version = "^0.7.3",features = ["small_rng"] }
image = "^0.19.0"
rayon = "^1.3.0"