[package]
name = "iiiD6"
version = "0.1.0"
authors = ["Andy Wang <cbeuw.andy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "^0.4.3"
sphrs = "^0.2.2"
rand = { version = "^0.8.5",features = ["small_rng"] }
image = "^0.24.0"
rayon = "^1.7.0"

[profile.release]
lto = true